--- a/index.html
+++ b/index.html
@@ -4,44 +4,43 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>CA Water Test by CAWaterTest</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-dark.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
   <body>
-
-      <header>
-        <h1>CA Water Test</h1>
-        <p>Organization Page  - California Water Test</p>
-      </header>
-
-      <div id="banner">
-        <span id="logo"></span>
-
-        <a href="https://github.com/CAWaterTest" class="button fork"><strong>View On GitHub</strong></a>
-      </div><!-- end banner -->
-
     <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
+      <header>
+        <h1 class="header">CA Water Test</h1>
+        <p class="header">Organization Page  - California Water Test</p>
+
+
+
+        <ul>
+          <li><a class="buttons github" href="https://github.com/CAWaterTest">GitHub Profile</a></li>
+        </ul>
+
+      </header>
       <section>
         <h3>
 <a id="this-is-the-california-water-test-page" class="anchor" href="#this-is-the-california-water-test-page" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>This is the California Water Test Page</h3>
 
-<p>Text text text <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a></p>
+<p>The Water Boards’ Office of Information Management and Analysis (OIMA) is hosting a Data Innovation Challenge this spring. The focus will be on creating apps, visualizations, and other tools that can help better harness data that is currently available. Generally, state government projects and products fail to share; disseminate; or make use, to its potential, the large amount of data that the government itself maintains. One of the aims of this event is to create products that demonstrate the use of data beyond what is currently being done. Data from the Water Boards’ CEDEN, SMARTS and CIWQS databases (see below) will be highlighted, but finding synergies with other datasets is encouraged and will be considered during the evaluation of the event entries.</p>
+
+<p>This event also kicks-off the first phase of the Water Boards’ Open Data Initiative, which includes making data from three systems available through an open data platform. Future phases will include adding additional datasets and the development of additional tools for enhanced data access, integration, and visualization. </p>
+
+<p><a href="http://www.waterboards.ca.gov/resources/data_databases/data_innov_challenge.shtml">Data Innovation Challenge - Water Data Dive</a></p>
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+		
   </body>
 </html>
