Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>California Water Data Dive 2016 by CAWaterTest</title>
+    <title>California Water Data Dive 2016 by CaliforniaWaterDataDive2016</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -19,7 +19,7 @@
       <p><img src="http://www.waterboards.ca.gov/resources/data_databases/images/water_data_dive_235x209.jpg" alt=""></p>
 
 <h3>
-<a id="this-is-the-california-water-test-page" class="anchor" href="#this-is-the-california-water-test-page" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>This is the California Water Test Page</h3>
+<a id="march-18---april-22-2016" class="anchor" href="#march-18---april-22-2016" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>MARCH 18 - APRIL 22, 2016</h3>
 
 <p>The Water Boards’ Office of Information Management and Analysis (OIMA) is hosting a Data Innovation Challenge this spring. The focus will be on creating apps, visualizations, and other tools that can help better harness data that is currently available. Generally, state government projects and products fail to share; disseminate; or make use, to its potential, the large amount of data that the government itself maintains. One of the aims of this event is to create products that demonstrate the use of data beyond what is currently being done. Data from the Water Boards’ CEDEN, SMARTS and CIWQS databases (see below) will be highlighted, but finding synergies with other datasets is encouraged and will be considered during the evaluation of the event entries.</p>
 
