--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <section class="main-content">
       <p><img src="http://www.waterboards.ca.gov/resources/data_databases/images/water_data_dive_235x209.jpg" alt=""></p>
 
+<p><strong>LATEST NEWS:</strong> We will be hosting a ‘coffee and conversation’ gathering on <strong>Friday April 1, 2016 from 9-11 am</strong> at the CalEPA headquarters building in downtown Sacramento (1001 I St). This informal gathering will mark the official release of the water-themed datasets on the open data portal (at greengov.data.ca.gov), and will give potential Data Innovation Challenge participants an opportunity to talk with stewards of those datasets and ask questions about the data. It will also be an opportunity for participants to talk with Water Boards’ staff more generally about the event, and about the problems they are working to solve and challenges they face. Coffee and snacks will be provided, and anyone interested in participating in the event is welcome to attend!</p>
+
 <h3>
 <a id="march-18---april-22-2016" class="anchor" href="#march-18---april-22-2016" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>MARCH 18 - APRIL 22, 2016</h3>
 
@@ -26,6 +28,11 @@
 <p>This event also kicks-off the first phase of the Water Boards’ Open Data Initiative, which includes making data from three systems available through an open data platform. Future phases will include adding additional datasets and the development of additional tools for enhanced data access, integration, and visualization. </p>
 
 <p><a href="http://www.waterboards.ca.gov/resources/data_databases/data_innov_challenge.shtml">Data Innovation Challenge - Water Data Dive</a></p>
+
+<h2>
+<a id="what-is-a-data-innovation-challenge" class="anchor" href="#what-is-a-data-innovation-challenge" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What is a Data Innovation Challenge?</h2>
+
+<p>A Data Innovation Challenge (also known as an apps challenge or codefest) is a competition of brainstorming and computer programming that draws together the talent and creativity of software developers and designers.</p>
 
       <footer class="site-footer">
 
