--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
 
 <p><a href="http://www.waterboards.ca.gov/resources/data_databases/data_innov_challenge.shtml">Data Innovation Challenge - Water Data Dive</a></p>
 
-<h3>
-<a id="latest-news" class="anchor" href="#latest-news" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>LATEST NEWS:</h3>
-
-<p>We will be hosting a ‘coffee and conversation’ gathering on <strong>Friday April 1, 2016 from 9-11 am</strong> at the CalEPA headquarters building in downtown Sacramento (1001 I St). This informal gathering will mark the official release of the water-themed datasets on the open data portal (at greengov.data.ca.gov), and will give potential Data Innovation Challenge participants an opportunity to talk with stewards of those datasets and ask questions about the data. It will also be an opportunity for participants to talk with Water Boards’ staff more generally about the event, and about the problems they are working to solve and challenges they face. Coffee and snacks will be provided, and anyone interested in participating in the event is welcome to attend!</p>
+<p><em><strong>LATEST NEWS:</strong></em>
+<em>We will be hosting a ‘coffee and conversation’ gathering on <strong>Friday April 1, 2016 from 9-11 am</strong> at the CalEPA headquarters building in downtown Sacramento (1001 I St). This informal gathering will mark the official release of the water-themed datasets on the open data portal (at greengov.data.ca.gov), and will give potential Data Innovation Challenge participants an opportunity to talk with stewards of those datasets and ask questions about the data. It will also be an opportunity for participants to talk with Water Boards’ staff more generally about the event, and about the problems they are working to solve and challenges they face. Coffee and snacks will be provided, and anyone interested in participating in the event is welcome to attend!</em></p>
 
 <hr>
 
@@ -35,6 +33,19 @@
 <a id="what-is-a-data-innovation-challenge" class="anchor" href="#what-is-a-data-innovation-challenge" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What is a Data Innovation Challenge?</h2>
 
 <p>A Data Innovation Challenge (also known as an apps challenge or codefest) is a competition of brainstorming and computer programming that draws together the talent and creativity of software developers and designers.</p>
+
+<h2>
+<a id="how-do-i-participate" class="anchor" href="#how-do-i-participate" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How do I participate?</h2>
+
+<p>Competition participants must register through Eventbrite at:</p>
+
+<p><a href="https://www.eventbrite.com/e/data-innovation-challenge-water-data-dive-registration-23928416538">https://www.eventbrite.com/e/data-innovation-challenge-water-data-dive-registration-23928416538</a></p>
+
+<p>Use the "Participant – Water Data Dive" ticket type.</p>
+
+<p>Competition participants must submit their product by 5:00 pm on April 19. Specific instructions on submitting products will be provided in the coming weeks. Participants must be available in-person or via web conference on April 22 to give a brief presentation on and demonstration of their product.</p>
+
+<p>If you are just wanting to attend the presentations and judging event, please also register using the link above, selecting one of the "attendee" ticket types.</p>
 
       <footer class="site-footer">
 
