Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <p><img src="http://www.waterboards.ca.gov/resources/data_databases/images/water_data_dive_235x209.jpg" alt=""></p>
 
 <p><em><strong>LATEST NEWS:</strong></em>
-<em>We will be hosting a ‘coffee and conversation’ gathering on <strong>Friday April 1, 2016 from 9-11 am</strong> at the CalEPA headquarters building in downtown Sacramento (1001 I St). This informal gathering will mark the official release of the water-themed datasets on the open data portal (at greengov.data.ca.gov), and will give potential Data Innovation Challenge participants an opportunity to talk with stewards of those datasets and ask questions about the data. It will also be an opportunity for participants to talk with Water Boards’ staff more generally about the event, and about the problems they are working to solve and challenges they face. Coffee and snacks will be provided, and anyone interested in participating in the event is welcome to attend!</em></p>
+<em>We will be hosting a ‘coffee and conversation’ gathering on <strong>Friday April 1, 2016 from 9-11 am</strong> at the CalEPA headquarters building in downtown Sacramento (1001 I St). This informal gathering will mark the official release of the water-themed datasets on the open data portal (at ), and will give potential Data Innovation Challenge participants an opportunity to talk with stewards of those datasets and ask questions about the data. It will also be an opportunity for participants to talk with Water Boards’ staff more generally about the event, and about the problems they are working to solve and challenges they face. Coffee and snacks will be provided, and anyone interested in participating in the event is welcome to attend!</em></p>
 
 <hr>
 
