--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>California Water Data Dive 2016 by CaliforniaWaterDataDive2016</title>
+    <title>California Water Data Dive 2016 by CAWaterDataDive</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -18,12 +18,9 @@
     <section class="main-content">
       <p><img src="http://www.waterboards.ca.gov/resources/data_databases/images/water_data_dive_235x209.jpg" alt=""></p>
 
-<p><em><strong>LATEST NEWS:</strong></em>
-<em>We will be hosting a ‘coffee and conversation’ gathering on <strong>Friday April 1, 2016 from 9-11 am</strong> at the CalEPA headquarters building in downtown Sacramento (1001 I St). This informal gathering will mark the official release of the water-themed datasets on the open data portal (at <a href="https://greengov.data.ca.gov/">greengov.data.ca.gov</a>), and will give potential Data Innovation Challenge participants an opportunity to talk with stewards of those datasets and ask questions about the data. It will also be an opportunity for participants to talk with Water Boards’ staff more generally about the event, and about the problems they are working to solve and challenges they face. Coffee and snacks will be provided, and anyone interested in participating in the event is welcome to attend!</em></p>
-
 <hr>
 
-<p>The Water Boards’ Office of Information Management and Analysis (OIMA) is hosting a <a href="http://www.waterboards.ca.gov/resources/data_databases/data_innov_challenge.shtml">Data Innovation Challenge</a> this spring. The focus will be on creating apps, visualizations, and other tools that can help better harness data that is currently available. Generally, state government projects and products fail to share; disseminate; or make use, to its potential, the large amount of data that the government itself maintains. One of the aims of this event is to create products that demonstrate the use of data beyond what is currently being done. Data from the Water Boards’ CEDEN, SMARTS and CIWQS databases (see below) will be highlighted, but finding synergies with other datasets is encouraged and will be considered during the evaluation of the event entries.</p>
+<p>The Water Boards’ Office of Information Management and Analysis (OIMA) is hosting a <a href="http://www.waterboards.ca.gov/resources/data_databases/data_innov_challenge.shtml">Data Innovation Challenge</a> this spring. The focus will be on creating apps, visualizations, and other tools that can help better harness and share data that is currently available, and that demonstrate enhanced uses of data to identify trends and make regulatory and planning decisions beyond what is currently being done. Data from the Water Boards’ CEDEN, SMARTS and CIWQS databases (see below) will be highlighted, but finding synergies with other datasets is encouraged and will be considered during the evaluation of the event entries.</p>
 
 <p>This event also kicks-off the first phase of the Water Boards’ Open Data Initiative, which includes making data from three systems available through an open data platform. Future phases will include adding additional datasets and the development of additional tools for enhanced data access, integration, and visualization. </p>
 
@@ -35,15 +32,9 @@
 <h2>
 <a id="how-do-i-participate" class="anchor" href="#how-do-i-participate" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How do I participate?</h2>
 
-<p>Competition participants must register through Eventbrite at:</p>
+<p>Competition participants must register through the <a href="https://www.eventbrite.com/e/data-innovation-challenge-water-data-dive-registration-23928416538">Eventbrite page</a> (use the "Participant – Water Data Dive" ticket type; those who only want to attend the presentations and judging event can use the link above and select one of the "attendee" ticket types).</p>
 
-<p><a href="https://www.eventbrite.com/e/data-innovation-challenge-water-data-dive-registration-23928416538">https://www.eventbrite.com/e/data-innovation-challenge-water-data-dive-registration-23928416538</a></p>
-
-<p>Use the "Participant – Water Data Dive" ticket type.</p>
-
-<p>Competition participants must submit their product by 5:00 pm on April 19. Specific instructions on submitting products will be provided in the coming weeks. Participants must be available in-person or via web conference on April 22 to give a brief presentation on and demonstration of their product.</p>
-
-<p>If you are just wanting to attend the presentations and judging event, please also register using the link above, selecting one of the "attendee" ticket types.</p>
+<p>Competition participants must submit their product by 5:00 pm on April 19, and must be available in-person or via web conference on April 22 to give a brief presentation on and demonstration of their product.</p>
 
       <footer class="site-footer">
 
