--- a/index.html
+++ b/index.html
@@ -32,9 +32,43 @@
 <h2>
 <a id="how-do-i-participate" class="anchor" href="#how-do-i-participate" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How do I participate?</h2>
 
-<p>Competition participants must register through the <a href="https://www.eventbrite.com/e/data-innovation-challenge-water-data-dive-registration-23928416538">Eventbrite page</a> (use the "Participant – Water Data Dive" ticket type; those who only want to attend the presentations and judging event can use the link above and select one of the "attendee" ticket types).</p>
+<p>Competition participants must register through the <a href="https://www.eventbrite.com/e/data-innovation-challenge-water-data-dive-registration-23928416538">Eventbrite page</a> (use the "Participant – Water Data Dive" ticket type; those who only want to attend the presentations and judging event but are not submitting an entry can use the link above and select one of the "attendee" ticket types).</p>
 
 <p>Competition participants must submit their product by 5:00 pm on April 19, and must be available in-person or via web conference on April 22 to give a brief presentation on and demonstration of their product.</p>
+
+<h2>
+<a id="submission-requirements" class="anchor" href="#submission-requirements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Submission Requirements</h2>
+
+<ul>
+<li>The Contest will accept any type of solution, including apps, websites, data visualizations or visualization tools, analyses contained in standalone documents, etc.</li>
+<li>Submissions can be rough—anything from wireframes to functioning websites/apps work</li>
+<li>Entrants must submit a PowerPoint of no more than five slides in PDF or PPTX format that describes their entry. Entrants are also required to make a brief (5 minutes or less) presentation at the closing event on April 22 (either in-person or remotely), and may present any material of their choosing in this presentation (PowerPoint slides, videos, demos, etc.).</li>
+<li>Submissions will be accepted from teams or individuals.</li>
+<li>Submissions should align with the California State Water Resources Control Boards’ mission in some way.</li>
+<li>Submissions can make use of any publicly available data sources, and Entrants are strongly encouraged to make use of at least one dataset available from the C.A. GreenGov open data portal (under the ‘Water’ category). Submissions should not include any data that is not available to the general public.</li>
+</ul>
+
+<h2>
+<a id="submission-instructions" class="anchor" href="#submission-instructions" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Submission Instructions</h2>
+
+<p>Participants can submit their products using whatever option from the list below is most convenient and appropriate to their product type, but all entries should be accompanied by an email as described below. Options for submitting entry products include:</p>
+
+<ul>
+<li>Email for submission of small standalone files or links to websites / apps / etc.</li>
+<li>A file sharing service (FTP site) for uploading larger files </li>
+<li>GitHub for submitting open-source code and other file types</li>
+</ul>
+
+<p>To submit your entry, send an email to <a href="mailto:David.Altare@waterboards.ca.gov">David.Altare@waterboards.ca.gov</a> with the following information:
+1.Your Name
+2.The name and email address of any team members (if applicable)
+3.Project Title
+4.Depending on your submission type, either:
+    a. A link to your website / app / etc.
+    b. An attached standalone document
+    c. The name of any file(s) uploaded to the FTP site. The FTP site is at: <a href="https://ftp.waterboards.ca.gov">https://ftp.waterboards.ca.gov</a> (Username: OIMA_upload / Password: AqcmBp)
+    d. A link to your GitHub repository
+If you have any questions about how to submit your entry, please email <a href="mailto:David.Altare@waterboards.ca.gov">David.Altare@waterboards.ca.gov</a>.</p>
 
       <footer class="site-footer">
 
