Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <ul>
 <li>The Contest will accept any type of solution, including apps, websites, data visualizations or visualization tools, analyses contained in standalone documents, etc.</li>
 <li>Submissions can be rough—anything from wireframes to functioning websites/apps work</li>
-<li>Entrants must submit a PowerPoint of no more than five slides in PDF or PPTX format that describes their entry. Entrants are also required to make a brief (5 minutes or less) presentation at the closing event on April 22 (either in-person or remotely), and may present any material of their choosing in this presentation (PowerPoint slides, videos, demos, etc.).</li>
+<li>Entrants must submit a brief (1 or 2 paragraph) description of their entry, as well as a PowerPoint of no more than five slides that describes their entry. Entrants are also required to make a brief (5 minutes or less) presentation at the closing event on April 22 (either in-person or remotely), and may present any material of their choosing in this presentation (PowerPoint slides, videos, demos, etc.).</li>
 <li>Submissions will be accepted from teams or individuals.</li>
 <li>Submissions should align with the California State Water Resources Control Boards’ mission in some way.</li>
 <li>Submissions can make use of any publicly available data sources, and Entrants are strongly encouraged to make use of at least one dataset available from the C.A. GreenGov open data portal (under the ‘Water’ category). Submissions should not include any data that is not available to the general public.</li>
@@ -63,6 +63,8 @@
 1. Your Name
 2. The name and email address of any team members (if applicable)
 3. Project Title
+1. A brief (1 or 2 paragraph) description of your entry
+1. An attached PowerPoint file of no more than 5 slides that describes your entry
 4. Depending on your submission type, either:</p>
 
 <p>If you have any questions about how to submit your entry, please email <a href="mailto:David.Altare@waterboards.ca.gov">David.Altare@waterboards.ca.gov</a>.</p>
