Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -59,13 +59,16 @@
 <li>GitHub for submitting open-source code and other file types</li>
 </ul>
 
-<p>To submit your entry, send an email to <a href="mailto:David.Altare@waterboards.ca.gov">David.Altare@waterboards.ca.gov</a> with the following information:
-1. Your Name
-2. The name and email address of any team members (if applicable)
-3. Project Title
-1. A brief (1 or 2 paragraph) description of your entry
-1. An attached PowerPoint file of no more than 5 slides that describes your entry
-4. Depending on your submission type, either:</p>
+<p>To submit your entry, send an email to <a href="mailto:David.Altare@waterboards.ca.gov">David.Altare@waterboards.ca.gov</a> with the following information:</p>
+
+<ol>
+<li>Your Name</li>
+<li>The name and email address of any team members (if applicable)</li>
+<li>Project Title</li>
+<li>A brief (1 or 2 paragraph) description of your entry</li>
+<li>An attached PowerPoint file of no more than 5 slides that describes your entry</li>
+<li>Depending on your submission type, either:</li>
+</ol>
 
 <p>If you have any questions about how to submit your entry, please email <a href="mailto:David.Altare@waterboards.ca.gov">David.Altare@waterboards.ca.gov</a>.</p>
 
