Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -67,7 +67,15 @@
 <li>Project Title</li>
 <li>A brief (1 or 2 paragraph) description of your entry</li>
 <li>An attached PowerPoint file of no more than 5 slides that describes your entry</li>
-<li>Depending on your submission type, either:</li>
+<li>Depending on your submission type, either:
+
+<ul>
+<li>A link to your website / app / etc.</li>
+<li>An attached standalone document</li>
+<li>The name of any file(s) uploaded to the FTP site. The FTP site is at: <a href="https://ftp.waterboards.ca.gov">https://ftp.waterboards.ca.gov</a> (Username: OIMA_upload / Password: AqcmBp)</li>
+<li>A link to your GitHub repository</li>
+</ul>
+</li>
 </ol>
 
 <p>If you have any questions about how to submit your entry, please email <a href="mailto:David.Altare@waterboards.ca.gov">David.Altare@waterboards.ca.gov</a>.</p>
