--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <hr>
 
-<p>The Water Boards’ Office of Information Management and Analysis (OIMA) is hosting a <a href="http://www.waterboards.ca.gov/resources/data_databases/data_innov_challenge.shtml">Data Innovation Challenge</a> this spring. The focus will be on creating apps, visualizations, and other tools that can help better harness and share data that is currently available, and that demonstrate enhanced uses of data to identify trends and make regulatory and planning decisions beyond what is currently being done. Data from the Water Boards’ CEDEN, SMARTS and CIWQS databases (see below) will be highlighted, but finding synergies with other datasets is encouraged and will be considered during the evaluation of the event entries.</p>
+<p>The Water Boards’ Office of Information Management and Analysis (OIMA) is hosting a <a href="http://www.waterboards.ca.gov/resources/data_databases/data_innov_challenge.shtml" title="Data Innovation Challenge Web Page">Data Innovation Challenge</a> this spring. The focus will be on creating apps, visualizations, and other tools that can help better harness and share data that is currently available, and that demonstrate enhanced uses of data beyond what is currently being done to identify trends and make more informed decisions. Data from the Water Boards’ CEDEN, SMARTS and CIWQS databases (see below) will be highlighted, but finding synergies with other datasets is encouraged and will be considered during the evaluation of the event entries.</p>
 
 <p>This event also kicks-off the first phase of the Water Boards’ Open Data Initiative, which includes making data from three systems available through an open data platform. Future phases will include adding additional datasets and the development of additional tools for enhanced data access, integration, and visualization. </p>
 
@@ -32,7 +32,7 @@
 <h2>
 <a id="how-do-i-participate" class="anchor" href="#how-do-i-participate" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How do I participate?</h2>
 
-<p>Competition participants must register through the <a href="https://www.eventbrite.com/e/data-innovation-challenge-water-data-dive-registration-23928416538">Eventbrite page</a> (use the "Participant – Water Data Dive" ticket type; those who only want to attend the presentations and judging event but are not submitting an entry can use the link above and select one of the "attendee" ticket types).</p>
+<p>Competition participants must register through the <a href="https://www.eventbrite.com/e/data-innovation-challenge-water-data-dive-registration-23928416538" title="2016 Data Innovation Challenge Registration Page">Eventbrite page</a> (use the "Participant – Water Data Dive" ticket type; those who only want to attend the presentations and judging event but are not submitting an entry can use the link above and select one of the "attendee" ticket types).</p>
 
 <p>Competition participants must submit their product by 5:00 pm on April 19, and must be available in-person or via web conference on April 22 to give a brief presentation on and demonstration of their product.</p>
 
@@ -79,6 +79,11 @@
 </ol>
 
 <p>If you have any questions about how to submit your entry, please email <a href="mailto:David.Altare@waterboards.ca.gov">David.Altare@waterboards.ca.gov</a>.</p>
+
+<h2>
+<a id="terms-and-conditions" class="anchor" href="#terms-and-conditions" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Terms and Conditions</h2>
+
+<p>Please read the complete <a href="http://www.waterboards.ca.gov/resources/data_databases/docs/dataInnov_terms.pdf" title="2016 Data Innovation Challenge - Terms and Conditions">Terms and Conditions</a> prior to submitting your entry.</p>
 
       <footer class="site-footer">
 
