--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>California Water Data Dive 2016 by CAWaterDataDive</title>
+    <title>California Water Data Dive: 2016 Data Innovation Challenge by CAWaterDataDive</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">California Water Data Dive 2016</h1>
+      <h1 class="project-name">California Water Data Dive: 2016 Data Innovation Challenge</h1>
       <h2 class="project-tagline">March 18 - April 22, 2016</h2>
     </section>
 
