--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <section class="main-content">
       <p><img src="http://www.waterboards.ca.gov/resources/data_databases/images/water_data_dive_235x209.jpg" alt=""></p>
 
-<p><em><a href="https://github.com/CAWaterDataDive">View on GitHub</a></em></p>
-
 <p>The Water Boards’ Office of Information Management and Analysis (OIMA) is hosting a <a href="http://www.waterboards.ca.gov/resources/data_databases/data_innov_challenge.shtml" title="Data Innovation Challenge Web Page">Data Innovation Challenge</a> this spring. The focus will be on creating apps, visualizations, and other tools that can help better harness and share data that is currently available, and that demonstrate enhanced uses of data beyond what is currently being done to identify trends and make more informed decisions. Data from three of the Water Boards’ databases will be highlighted, but finding synergies with other datasets is encouraged and will be considered during the evaluation of the event entries.</p>
 
 <p>This event also kicks-off the first phase of the Water Boards’ Open Data Initiative, which includes making data from three systems available through an open data platform. Future phases will include adding additional datasets and the development of additional tools for enhanced data access, integration, and visualization. </p>
+
+<p><strong><a href="https://github.com/CAWaterDataDive">Visit CAWaterDataDive on GitHub</a></strong></p>
 
 <h2>
 <a id="what-is-a-data-innovation-challenge" class="anchor" href="#what-is-a-data-innovation-challenge" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What is a Data Innovation Challenge?</h2>
