--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="main-content">
       <p><img src="http://www.waterboards.ca.gov/resources/data_databases/images/water_data_dive_235x209.jpg" alt=""></p>
 
-<p><strong><a href="https://github.com/CAWaterDataDive">Visit CAWaterDataDive on GitHub</a></strong></p>
+<p><strong><a href="https://github.com/CAWaterDataDive" title="CAWaterDataDive GitHub Profile">Visit CAWaterDataDive on GitHub</a></strong></p>
 
 <hr>
 
