Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="main-content">
       <p><img src="http://www.waterboards.ca.gov/resources/data_databases/images/water_data_dive_235x209.jpg" alt=""></p>
 
-<p><strong><a href="https://github.com/CAWaterDataDive" title="CAWaterDataDive GitHub Profile">Visit CAWaterDataDive on GitHub</a></strong>  [<img class="emoji" title=":octocat:" alt=":octocat:" src="https://assets-cdn.github.com/images/icons/emoji/octocat.png" height="20" width="20" align="absmiddle">]</p>
+<p><strong><a href="https://github.com/CAWaterDataDive" title="CAWaterDataDive GitHub Profile">Visit CAWaterDataDive on GitHub</a></strong>  <a href="https://github.com/CAWaterDataDive" title="CAWaterDataDive GitHub Profile"><img class="emoji" title=":octocat:" alt=":octocat:" src="https://assets-cdn.github.com/images/icons/emoji/octocat.png" height="20" width="20" align="absmiddle"></a></p>
 
 <hr>
 
