Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
 <p><strong><a href="https://github.com/CAWaterDataDive" title="CAWaterDataDive GitHub Profile">Visit CAWaterDataDive on GitHub</a></strong>  <a href="https://github.com/CAWaterDataDive" title="CAWaterDataDive GitHub Profile"><img class="emoji" title=":octocat:" alt=":octocat:" src="https://assets-cdn.github.com/images/icons/emoji/octocat.png" height="20" width="20" align="absmiddle"></a></p>
 
+<p><a href="https://github.com/CAWaterDataDive"><img alt="alt text" title="hover text"></a></p>
+
 <hr>
 
 <p>The Water Boards’ Office of Information Management and Analysis (OIMA) is hosting a <a href="http://www.waterboards.ca.gov/resources/data_databases/data_innov_challenge.shtml" title="Data Innovation Challenge Web Page">Data Innovation Challenge</a> this spring. The focus will be on creating apps, visualizations, and other tools that can help better harness and share data that is currently available, and that demonstrate enhanced uses of data beyond what is currently being done to identify trends and make more informed decisions. Data from three of the Water Boards’ databases will be highlighted, but finding synergies with other datasets is encouraged and will be considered during the evaluation of the event entries.</p>
