Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -22,9 +22,46 @@
 
 <hr>
 
-<p>The Water Boards’ Office of Information Management and Analysis (OIMA) is hosting a <a href="http://www.waterboards.ca.gov/resources/data_databases/data_innov_challenge.shtml" title="Data Innovation Challenge Web Page">Data Innovation Challenge</a> this spring. The focus will be on creating apps, visualizations, and other tools that can help better harness and share data that is currently available, and that demonstrate enhanced uses of data beyond what is currently being done to identify trends and make more informed decisions. Data from three of the Water Boards’ databases will be highlighted, but finding synergies with other datasets is encouraged and will be considered during the evaluation of the event entries.</p>
+<p>The Water Boards’ Office of Information Management and Analysis (OIMA) is hosting a <a href="http://www.waterboards.ca.gov/resources/data_databases/data_innov_challenge.shtml" title="Data Innovation Challenge Web Page">Data Innovation Challenge</a> this spring. The focus will be on creating apps, visualizations, and other tools that can help better harness and share data that is currently available, and demonstrate enhanced uses of data beyond what is currently being done in state government to identify trends and make more informed decisions. Data from three of the Water Boards’ databases will be highlighted, but finding synergies with other datasets is encouraged and will be considered during the evaluation of the event entries.</p>
 
 <p>This event also kicks-off the first phase of the Water Boards’ Open Data Initiative, which includes making data from three systems available through an open data platform. Future phases will include adding additional datasets and the development of additional tools for enhanced data access, integration, and visualization. </p>
+
+<p><strong>LATEST NEWS:</strong> The closing ceremony for the 2016 Data Innovation Challenge will be held on <strong>April 22 from 10:00 a.m. to 2:00 p.m.</strong> at the California Environmental Protection Agency headquarters at 1001 I St in downtown Sacramento. Participants are automatically registered for the closing ceremony, but if you would like to come just to watch the event you’re also welcome to attend – just register using the link below. The event will also be broadcast via webinar for those who can’t attend in person (you will receive a link to the webinar after registering for the event). The agenda for the closing ceremony is below.</p>
+
+<table>
+<thead>
+<tr>
+<th>Time</th>
+<th>Activity</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>10:00</td>
+<td>Welcome</td>
+</tr>
+<tr>
+<td>10:15</td>
+<td>Notes on Judging</td>
+</tr>
+<tr>
+<td>10:20</td>
+<td>Participant Presentations</td>
+</tr>
+<tr>
+<td>Directly following participant presentations</td>
+<td>Lunch and Judging Deliberation</td>
+</tr>
+<tr>
+<td>1:15</td>
+<td>Awards Ceremony</td>
+</tr>
+<tr>
+<td>1:45</td>
+<td>Next Steps</td>
+</tr>
+</tbody>
+</table>
 
 <hr>
 
