--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
 <p>To submit your entry, send an email to <a href="mailto:David.Altare@waterboards.ca.gov">David.Altare@waterboards.ca.gov</a> with the following information:</p>
 
 <ol>
-<li>Your Name</li>
+<li>Your name</li>
 <li>The name and email address of any team members (if applicable)</li>
-<li>Project Title</li>
+<li>Project title</li>
 <li>A brief (1 or 2 paragraph) description of your entry</li>
 <li>A list of the datasets you used (or would plan to use if your entry is a proof-of-concept entry) - for example, the name of any datasets on the open data portal you used, the name of any other Water Board datasets you used, and/or the name and URL of any other publicly available dataset(s) you used</li>
 <li>An attached PowerPoint file of no more than 5 slides that describes your entry</li>
