Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <li>The name and email address of any team members (if applicable)</li>
 <li>Project title</li>
 <li>A brief (1 or 2 paragraph) description of your entry</li>
-<li>A list of the datasets you used (or would plan to use if your entry is a proof-of-concept entry) - for example, the name of any datasets on the open data portal you used, the name of any other Water Board datasets you used, and/or the name and URL of any other publicly available dataset(s) you used</li>
+<li>A list of the datasets you used (or would plan to use if your entry is a proof-of-concept entry) — for example, the name of any datasets on the open data portal you used, the name of any other Water Board datasets you used, and/or the name and URL of any other publicly available dataset(s) you used</li>
 <li>An attached PowerPoint file of no more than 5 slides that describes your entry</li>
 <li>Depending on your submission type, either:
 
